working on the project

--- a/E-commerce/index.html
+++ b/E-commerce/index.html
@@ -69,14 +69,19 @@
     <!-- end of the products -->
     <!-- cart -->
     <div class="cart-overlay">
-      <div class="cart">
+      <div class="cart"> 
         <span class="close-cart">
           <i class="fas fa-window-close"></i>
         </span>
         <h2>your cart</h2>
         <div class="cart-content">
           <!-- cart item -->
-         <!-- <div class="cart-item"></div> -->
+        <div class="cart-item">
+          <img src="./images/product-1.jpeg" alt="product">
+          <h4>queen bed</h4>
+          <h5>$9.00</h5>
+          <span class="remove-item">remove</span>
+        </div>
           <!-- end of the cart item -->
         </div>
         <div class="cart-footer">
