continuing the practice

--- a/E-commerce/index.html
+++ b/E-commerce/index.html
@@ -76,12 +76,9 @@
         <h2>your cart</h2>
         <div class="cart-content">
           <!-- cart item -->
-        <div class="cart-item">
-          <img src="./images/product-1.jpeg" alt="product">
-          <h4>queen bed</h4>
-          <h5>$9.00</h5>
-          <span class="remove-item">remove</span>
-        </div>
+       <!-- <div class="cart-item">
+          
+        </div> -->
           <!-- end of the cart item -->
         </div>
         <div class="cart-footer">
